# seagate-leds

./: LICENSE  Makefile  README.md  configure.ac  seagate-leds.cpp
src/: Makefile.am  seagate-leds.cpp
